[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nicelogin-jwks-python"
version = "0.2.0"
description = "SDK minimalista para NiceLogin: verificação JWT, reset de senha, ativar/desativar usuário (zero dependencies)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
keywords = ["jwt", "jwks", "nicelogin", "authentication", "token"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://nicelogin.com"
Documentation = "https://docs.nicelogin.com"

[tool.hatch.build.targets.wheel]
packages = ["nicelogin_jwks"]

[tool.hatch.build.targets.sdist]
include = ["nicelogin_jwks"]
